force-app/main/default/objects/ucinn_ascendv2__Home_Department__c/ucinn_ascendv2__Home_Department__c.object-meta.xml
<CustomObject>
    <description>Department where constituent works at.</description>
    <label>Home Department</label>
    <nameField>
        <label>Department Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>