force-app/main/default/objects/ucinn_ascendv2__Home_Department__c/fields/ucinn_ascendv2__Department_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Department_Name__c</fullName>
    <label>Department Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>