force-app/main/default/objects/ucinn_ascendv2__Home_Department__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>ucinn_ascendv2__Department_Name__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>